--- a/Hotel_Management_System/Hotel_Management_System/Hotel_Management_System.csproj
+++ b/Hotel_Management_System/Hotel_Management_System/Hotel_Management_System.csproj
@@ -59,6 +59,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckIn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CheckIn.Designer.cs">
+      <DependentUpon>CheckIn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,12 @@
     </Compile>
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ManageRooms.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManageRooms.Designer.cs">
+      <DependentUpon>ManageRooms.cs</DependentUpon>
     </Compile>
     <Compile Include="ManageUsers.cs">
       <SubType>Form</SubType>
@@ -92,6 +104,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>My_DataBaseDataSet2.xsd</DependentUpon>
     </Compile>
+    <Compile Include="My_DataBaseDataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>My_DataBaseDataSet3.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="My_DataBaseDataSet4.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>My_DataBaseDataSet4.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs">
@@ -100,11 +122,17 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CheckIn.resx">
+      <DependentUpon>CheckIn.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManageRooms.resx">
+      <DependentUpon>ManageRooms.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ManageUsers.resx">
       <DependentUpon>ManageUsers.cs</DependentUpon>
@@ -155,6 +183,28 @@
     <None Include="My_DataBaseDataSet2.xss">
       <DependentUpon>My_DataBaseDataSet2.xsd</DependentUpon>
     </None>
+    <None Include="My_DataBaseDataSet3.xsc">
+      <DependentUpon>My_DataBaseDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="My_DataBaseDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>My_DataBaseDataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="My_DataBaseDataSet3.xss">
+      <DependentUpon>My_DataBaseDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="My_DataBaseDataSet4.xsc">
+      <DependentUpon>My_DataBaseDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="My_DataBaseDataSet4.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>My_DataBaseDataSet4.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="My_DataBaseDataSet4.xss">
+      <DependentUpon>My_DataBaseDataSet4.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -187,12 +237,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="My_DataBase.mdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="My_DataBase_log.ldf">
       <DependentUpon>My_DataBase.mdf</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\Lawrencium.jpg" />
     <None Include="Resources\gradient_img %282%29.png" />
     <None Include="Resources\gradient.png" />
     <None Include="Resources\gradient_img %281%29.png" />
