--- a/Hotel_Management_System/Hotel_Management_System/Hotel_Management_System.csproj
+++ b/Hotel_Management_System/Hotel_Management_System/Hotel_Management_System.csproj
@@ -114,6 +114,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>My_DataBaseDataSet4.xsd</DependentUpon>
     </Compile>
+    <Compile Include="My_DataBaseDataSet5.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>My_DataBaseDataSet5.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="My_DataBaseDataSet6.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>My_DataBaseDataSet6.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs">
@@ -204,6 +214,28 @@
     </None>
     <None Include="My_DataBaseDataSet4.xss">
       <DependentUpon>My_DataBaseDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="My_DataBaseDataSet5.xsc">
+      <DependentUpon>My_DataBaseDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="My_DataBaseDataSet5.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>My_DataBaseDataSet5.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="My_DataBaseDataSet5.xss">
+      <DependentUpon>My_DataBaseDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="My_DataBaseDataSet6.xsc">
+      <DependentUpon>My_DataBaseDataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="My_DataBaseDataSet6.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>My_DataBaseDataSet6.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="My_DataBaseDataSet6.xss">
+      <DependentUpon>My_DataBaseDataSet6.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
